<resources>
    <string name="app_name">Pinguis, id est vita</string>
    <string name="project_name">DroidRestaurant</string>
    <string name="project_welcome">Bienvenue</string>
    <string name="project_chez">chez</string>
    <string name="project_starter">Entrées</string>
    <string name="project_mainCourse">Plats</string>
    <string name="project_dessert">Desserts</string>
    <string name="project_buy">Ajouter au panier</string>
    <string name="project_price">Prix</string>
    <string name="project_currency">€</string>
    <string name="project_info" />
    <string name="project_pay">Payer</string>
    <string name="project_dish_default_name">Plat par défaut</string>
    <string name="project_basket_total">Total : </string>
    <string name="project_basket_qty">Quantité : </string>
    <string name="project_dish_default_image">DishImage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="project_login">"Compte : "</string>
    <string name="project_mdp">"Mot de passe : "</string>
    <string name="project_connect">Connexion</string>
    <string name="project_nom">Nom</string>
    <string name="project_surname">Prénom</string>
    <string name="project_address">Adresse</string>
    <string name="project_email">Email</string>
    <string name="project_regpass">Mot de passe</string>
    <string name="project_register">S\'enregistrer</string>
    <string name="project_txtregister">Créez votre compte</string>
    <string name="project_home">Retourner à l\'accueil</string>
    <string name="project_orderTreatment">Commande en cours de traitement ...</string>
    <string name="project_orderFinish">Commande traitée !</string>
    <string name="project_about">A propos de cette application</string>
    <string name="project_author">Développeur : Patrick Surre</string>
    <string name="project_idea">Idée originale : Marc Mollinari</string>
    <string name="project_design">Design : Patrick Surre</string>
</resources>